--- a/Desktop/BE45/main-project/location/frontend/geolocation_test.html
+++ b/Desktop/BE45/main-project/location/frontend/geolocation_test.html
@@ -14,6 +14,6 @@
 <div id="map"></div>
 <button id="getLocationButton">Get Location</button>
 <script src="app.js"></script>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCMv441cKc-s9OytVs4WV48uGTjO7uo0Jk&libraries=places&callback=initMap"></script>
+<script src=""></script>
 </body>
 </html>
