--- a/Desktop/BE45/main-project/location/frontend/geolocation_test.html
+++ b/Desktop/BE45/main-project/location/frontend/geolocation_test.html
@@ -14,6 +14,6 @@
 <div id="map"></div>
 <button id="getLocationButton">Get Location</button>
 <script src="app.js"></script>
-<script src=""></script>
+<script src="google maps API key in here"></script>
 </body>
 </html>
