--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,14 +7,13 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap"
       rel="stylesheet"
     />
-
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
-    <title>STACKOVERFLOW</title>
+    <title>Petalk</title>
   </head>
   <body>
     <div id="root"></div>
