--- a/client/public/index.html
+++ b/client/public/index.html
@@ -14,7 +14,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <title>STACKOVERFLOW</title>
+    <title>Petalk</title>
   </head>
   <body>
     <div id="root"></div>
